<resources>
    <string name="app_name">Decorum Furniture</string>


    <string name="reg_text">Registration</string>
    <string name="reg_username">Registration</string>
    <string name="reg_pass">Registration</string>
    <string name="reg_email">Registration</string>
    <string name="reg_phone">Registration</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_gender_male">Male</string>
    <string name="reg_gender_female">Female</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_wishlist">Wishlist</string>
    <string name="title_orders">Orders</string>
    <string name="title_home">Home</string>

    <string name="title_accounts">Accounts</string>
    <string name="title_cart">Cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_desc">test</string>
    <string name="tv_filter">filter</string>
    <string name="del_name">Name</string>
    <string name="del_address">Address</string>
    <string name="placeorder">Place order</string>
    <string name="del_check">check</string>
    <string name="del_pincode">Pincode</string>
    <string name="textremove">cancel order</string>
    <string name="tv_clear">Clear</string>
    <string name="tv_edit">edit</string>
    <string name="tv_gender">Gender</string>
    <string name="tv_gender_male">male</string>
    <string name="tv_gender_female">female</string>
    <string name="tv_logout">logout</string>
    <string name="title_activity_place_details">PlaceDetailsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

    </string>


    <array name="time">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>

    </array>

    <array name="hoteltype">
        <item>Homely Food</item>
        <item>Hotel</item>


    </array>

    <array name="travellist">
        <item>Bus</item>
        <item>Traveller</item>
        <item>Car</item>
        <item>Ship</item>
        <item>Flight</item>
        <item>Train</item>

    </array>


    <string name="apikey">AIzaSyD9HIHedy4KJwbuTT4_IG0CNV8GbQJRHwU</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_route_maps">Map</string>
    <string name="terms">In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.</string>
    <string name="title_activity_view_user_location">Map</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="termsuser">In this tutorial we will see how to calculate the number of days between two dates. Program to find the number of Days between two Dates In this program.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="new_Account">NEW ACCOUNT</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="no_account">Dont have an account? <b>Sign Up</b></string>
    <string name="start_home_deco">Start Decorating Your</string>
    <string name="start_home_deco_cont"><b>Home With Us</b></string>
    <string name="have_account">Already have an account? <b>Log in</b></string>

    <string name="discover_living_room">Design</string>
    <string name="kitchen_title">Your Ideal Kitchen</string>
    <string name="office">Home Office</string>
    <string name="relax_room">Bedroom</string>
    <string name="discover_text">Your Sitting Room Perfectly</string>
    <string name="kitchen_text">Get every kitchen need set up </string>
    <string name="office_text">Customized and Nicely set up</string>
    <string name="rewards_text">Start Now</string>
    <string name="get_started">Get Started</string>
    <string name="bedroom">Bedroom</string>
    <string name="next">Next</string>

</resources>
