<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="250dp"
            android:background="@drawable/home_deco"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/home_deco"
                android:scaleType="centerCrop" />
        </com.github.florent37.shapeofview.shapes.ArcView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="1dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="14dp"
                    app:cardElevation="10dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_below="@id/image"
                        android:layout_centerInParent="true"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:orientation="vertical">
                        <EditText
                            android:id="@+id/edUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:background="@drawable/rectangular"
                            android:hint="@string/username_hint" />

                        <EditText
                            android:id="@+id/edPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rectangular"
                            android:inputType="textPassword"
                            android:hint="@string/password" />

                        <Button
                            android:id="@+id/btLogin"
                            android:layout_width="match_parent"
                            android:layout_marginTop="5dp"
                            android:layout_height="wrap_content"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:background="@color/colorPrimaryDark"
                            />

                        <com.ctrlplusz.anytextview.AnyTextView
                            android:id="@+id/tvForgotPass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="center"
                            android:text="@string/forgot_password"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginBottom="5dp"
                            app:typeface="FontsFree-Net-SFProText-Bold.ttf" />

                        <com.ctrlplusz.anytextview.AnyTextView
                            android:id="@+id/tvSignUp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:gravity="center"
                            android:text="@string/no_account"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:layout_marginTop="5dp"
                            app:typeface="FontsFree-Net-SFProText-Medium-1.ttf" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>

    </RelativeLayout>