<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="left"

                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgback"
                    android:layout_width="@dimen/dimen_50dp"
                    android:layout_height="@dimen/dimen_50dp"
                    android:layout_alignParentLeft="true"
                    android:padding="@dimen/dimen_10dp"
                    android:layout_centerVertical="true"
                    app:srcCompat="@drawable/ic_back"
                    />



                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:text="Registration"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/dimen_18sp"
                    android:layout_marginLeft="@dimen/dimen_60dp"
                    android:fontFamily="@font/montserratregular"
                    android:layout_alignParentLeft="true"

                    android:layout_centerVertical="true"



                    />





            </RelativeLayout>



        </androidx.appcompat.widget.Toolbar>
        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/start_home_deco"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/transluscent_white"
            android:layout_marginBottom="5dp"
            app:typeface="FontsFree-Net-SFProText-Bold.ttf" />

        <com.ctrlplusz.anytextview.AnyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/start_home_deco_cont"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"
            app:typeface="FontsFree-Net-SFProText-Bold.ttf" />

        <Button
            android:id="@+id/bt_ready_login"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="20dp"
            android:textAllCaps="false"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_shape"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            android:text="@string/have_account" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_one_corner">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Name"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="textEmailAddress"
                android:hint="Email" />
            <EditText
                android:id="@+id/input_mobile"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:padding="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:inputType="phone"
                android:hint="Phone Number" />

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="Password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/input_reEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="Re- enter Password"
                android:inputType="textPassword" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:weightSum="2"
                android:padding="@dimen/dimen_10dp">
                <RadioButton
                    android:id="@+id/rdMale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Male" />
                <RadioButton
                    android:id="@+id/radiofemale"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Female" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@drawable/rounded_shape"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/headertext"
                    android:layout_width="wrap_content"
                    android:text="@string/get_started"
                    android:textColor="@color/white"
                   android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_toRightOf="@id/headertext"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    app:srcCompat="@drawable/next_arrow" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>
